# qrb_ros_motion_manager_service

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build-check-sdk.yaml
include/qrb_ros_motion_service/: motion_controller.hpp
include/qrb_ros_motion_service/motion_node/: arc_motion_action.hpp  circle_motion_action.hpp  line_motion_action.hpp  motion_publisher.hpp  odom_subscriber.hpp  path_publisher.hpp  rectangle_motion_action.hpp  rotation_motion_action.hpp  simulation_sub_pub.hpp  status_monitor.hpp  tf_subscriber.hpp
include/qrb_ros_motion_service/motion_service/: motion_service_proxy.hpp
src/: main.cpp  motion_controller.cpp
src/motion_node/: arc_motion_action.cpp  circle_motion_action.cpp  line_motion_action.cpp  motion_publisher.cpp  odom_subscriber.cpp  path_publisher.cpp  rectangle_motion_action.cpp  rotation_motion_action.cpp  simulation_sub_pub.cpp  status_monitor.cpp  tf_subscriber.cpp
src/motion_service/: motion_service_proxy.cpp
