<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_ros_motion_service</name>
  <version>1.0.0</version>
  <description>QRB ROS Motion Service</description>
  <maintainer email="quic_penfen@quicinc.com">Peng Feng</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>qrb_ros_motion_msgs</depend>
  <depend>qrb_motion_manager</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>qrb_ros_robot_base_msgs</depend>
  <depend>qrb_ros_amr_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
